src/parser/expr/snapshots/hulk_compiler__parser__expr__control_flow__tests__parser_snapshot_while.snap
---
source: src/parser/expr/control_flow.rs
expression: ast
---
node:
  While:
    condition:
      node:
        Literal:
          node:
            Bool: true
          span:
            start: 16
            end: 20
      span:
        start: 16
        end: 20
    body:
      node:
        Literal:
          node:
            Number: 1
          span:
            start: 22
            end: 23
      span:
        start: 22
        end: 23
span:
  start: 16
  end: 23
